[package]
name = "arcfinder"
version = "0.1.1"
authors = ["Örjan Ekeberg <orjan@ekeb.se>"]
edition = "2018"
description = "Tool for finding arcs in gcode for 3D-printing and replacing them with G2/G3 commands"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["gcode", "slicer", "printing", "CAD"]
categories = ["graphics", "encoding"]
repository = "https://github.com/orjanekeberg/arcfinder"
include = ["/src", "README.md"]

[dependencies]
regex = "1"
structopt = { version = "0.3", default-features = false }
